Fixed an issue where form not showing properly in Safari

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,7 +51,7 @@ nav {
 
 .form-style input[type="text"] {
   padding: 10px;
-  height: 35px;
+  height: 42px;
   margin-bottom: 10px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -59,7 +59,7 @@ nav {
 
 .form-style input[type="email"] {
   padding: 10px;
-  height: 35px;
+  height: 42px;
   margin-bottom: 10px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -67,14 +67,14 @@ nav {
 
 .form-style input[type="password"] {
   padding: 10px;
-  height: 35px;
+  height: 42px;
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
 .form-style input[type="file"] {
-  height: 35px;
+  height: 42px;
   margin-top: 5px;
   margin-bottom: 5px;
   border-top-left-radius: 0;
@@ -84,7 +84,7 @@ nav {
 .form-style input[type="number"] {
   width: 190px;
   padding: 5px;
-  height: 35px;
+  height: 42px;
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -101,7 +101,7 @@ nav {
 
 .form-style select {
   width: 190px;
-  height: 35px;
+  height: 42px;
   margin-top: 5px;
   margin-bottom: 10px;
   border-top-left-radius: 0;
